--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,15 @@
 page-home {
 
+	.login-logo {
+		display: block;
+		width: 40%;
+		margin: auto;
+		margin-top: 20px;
+	}
+
+	.login-btn  {
+		height: 30px;
+    font-size: 13px;
+	}
 }
+
