--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -22,7 +22,7 @@ $app-direction: ltr;
 // To view all the possible Ionic variables, see:
 // http://ionicframework.com/docs/theming/overriding-ionic-variables/
 
-$toolbar-background: #b34019;
+$toolbar-background: #a74423;
 
 
 
