--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -3,9 +3,9 @@ page-home {
 		.item-md {
 			background-color: #822e12;
 	    color: white;
-	    font-size: 9pt;
+	    font-size: 10pt;
 	    text-transform: uppercase;
-      height: 30px;
+      height: 34px;
 	    padding: 0;
 	    min-height: 30px;
 	    border-bottom: 1px solid #f3f1f1;
@@ -22,14 +22,40 @@ page-home {
 	    	background-color: white;
 	    	padding-left: 24px;
 	    	color: black;
-	    	font-size: 8pt;
-  	    height: 40px;
-    		min-height: 40px;
+	    	font-size: 9pt;
+  	    height: auto;
+    		min-height: auto;
 
     		.mod-note {
     			color: red;
 			    margin-top: 3px;
     		}
+
+				.item-inner {
+				  margin-left: 32px;
+
+				  .label-md {
+				  	margin: 7px 8px 7px 0;
+				  }
+				}
+
+				ion-icon[item-left] {
+			    text-align: center;
+			    position: absolute;
+			    left: 23px;
+			    top: 18px;
+			    margin-top: 0;
+				}
+
+				.mod-details {
+					margin-top: 10px;
+					.small-item  {
+				    border-top: 1px solid #f3f1f1;
+				    color: grey;
+				    padding: 4px 0;
+					}
+				}
+
 	    }
 		}
 
