--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -42,6 +42,8 @@
     font-size: 11pt;
     text-transform: uppercase;
     color: #fff;
+    width: 80%;
+    text-align: left;
   }
 
   .card-etab {
@@ -50,6 +52,8 @@
     top: 46%;
     left: 15px;
     color: #ece8e8;
+    width: 80%;
+    text-align: left;
   }
   .card-filiere {
     font-size: 10pt;
@@ -57,6 +61,8 @@
     top: 56%;
     left: 15px;
     color: #ece8e8;
+    width: 80%;
+    text-align: left;
   }
   .card-annee {
     font-size: 9pt;
@@ -64,6 +70,8 @@
     top: 66%;
     left: 15px;
     color: #fff;
+    width: 80%;
+    text-align: left;
   }
 
   .btn-icon {
